# stale-obsidian-note-detector

./: .coverage  README.md  pyproject.toml
src/: main.py
src/stale_obsidian_note_detector/: logic.py  prompts.py  schema.py
tests/: test_cli.py  test_logic.py
